; ModuleID = '/home/carl/AnghaBench/php-src/main/extr_fastcgi.c_fcgi_shutdown.c'
source_filename = "/home/carl/AnghaBench/php-src/main/extr_fastcgi.c_fcgi_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@is_initialized = common dso_local global i64 0, align 8
@fcgi_mgmt_vars = common dso_local global i32 0, align 4
@is_fastcgi = common dso_local global i64 0, align 8
@allowed_clients = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fcgi_shutdown() #0 {
  %1 = load i64, i64* @is_initialized, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 @zend_hash_destroy(i32* @fcgi_mgmt_vars)
  br label %5

5:                                                ; preds = %3, %0
  store i64 0, i64* @is_fastcgi, align 8
  %6 = load i64, i64* @allowed_clients, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %5
  %9 = load i64, i64* @allowed_clients, align 8
  %10 = call i32 @free(i64 %9)
  br label %11

11:                                               ; preds = %8, %5
  ret void
}

declare dso_local i32 @zend_hash_destroy(i32*) #1

declare dso_local i32 @free(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
